<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewTaskActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textViewLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Task_title" />

        <EditText
            android:id="@+id/editTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Task_title_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Description_task_title" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Description_task" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_date_task" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Enter_date_task_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/points_task" />

        <EditText
            android:id="@+id/Points"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:hint="@string/points_task_hint" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Repeat" />

        <include
            android:id="@+id/daypicker"
            layout="@layout/daypicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></include>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Assign_to_task" />

        <Spinner
            android:id="@+id/spinner_users"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Assign_to_task_hint"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            />
        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Submit_task"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="540dp" />


    </LinearLayout>





</android.support.constraint.ConstraintLayout>