<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewTaskActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textViewLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reward_Title" />

        <EditText
            android:id="@+id/editNameReward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_reward" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Description_task_title" />

        <EditText
            android:id="@+id/editDescriptionReward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Description_task" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/points_needed" />

        <EditText
            android:id="@+id/Points_reward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/points_task_hint" />

        <Button
            android:id="@+id/buttonSubmitReward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Submit_reward"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="540dp" />


    </LinearLayout>





</android.support.constraint.ConstraintLayout>