<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewTaskActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textViewLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/Title"
            android:layout_height="match_parent"
            android:textSize="32dp"
            android:gravity="center"
            android:background="@drawable/back"
            android:text="@string/Task_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:hint="@string/Description_task_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:id="@+id/Description"
            android:background="@drawable/back"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="22dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/end_date_task" />

        <TextView
            android:layout_width="match_parent"
            android:background="@drawable/back"
            android:id="@+id/Limit_Date"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="22dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/points_task" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:id="@+id/Points"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="22dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/Created_by" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:id="@+id/created_by"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="22dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/Completed" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:id="@+id/Completed"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="22dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/Repetitive" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:id="@+id/Repetitive"/>




    </LinearLayout>





</android.support.constraint.ConstraintLayout>