<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arcadi.treballfigrau.activity.ProfileActivity">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textViewLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="2dp"
                android:text="@string/Your_family" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:id="@+id/Family_text"
                android:textStyle="bold"
                android:layout_centerHorizontal = "true"/>
        </RelativeLayout>


        <ListView
            android:id="@+id/list_view_family"
            android:layout_width="match_parent"
            android:layout_height="257dp"
            android:layout_alignParentTop="true"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_new_family"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Create_family"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="540dp"/>

        <TextView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:text="@string/Your_info"
            android:background="@drawable/back"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textSize="20sp"
            android:text="@string/Username"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/Name_User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textSize="20sp"
            android:text="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textSize="20sp"
            android:text="@string/email"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/Email_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textSize="20sp"
            android:text="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textSize="20sp"
            android:text="@string/Points"

            android:textStyle="bold" />

        <TextView
            android:id="@+id/Points_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textSize="20sp"
            android:text="" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>